<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/progressBar">
            <ProgressBar
                android:id="@+id/view_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:rotation="-90"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:progressDrawable="@drawable/circular_progressbar" />

            <TextView
                android:id="@+id/timerValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                tools:text="Timer"
                android:layout_centerInParent="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pickerGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <NumberPicker
                android:id="@+id/hoursPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/hoursText"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/hoursPicker"
                android:layout_marginBottom="70dp"
                android:layout_toEndOf="@id/hoursPicker"
                android:text="@string/hours"
                android:fontFamily="sans-serif-light"
                />

            <NumberPicker
                android:id="@+id/minutesPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/hoursText"
                />
            <TextView
                android:id="@+id/minutesText"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/minutesPicker"
                android:layout_marginBottom="70dp"
                android:layout_toEndOf="@id/minutesPicker"
                android:text="@string/minutes"
                android:fontFamily="sans-serif-light"
                />
            <NumberPicker
                android:id="@+id/secondsPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/minutesText"
                />
            <TextView
                android:id="@+id/secondsText"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/secondsPicker"
                android:layout_marginBottom="70dp"
                android:layout_toEndOf="@id/secondsPicker"
                android:text="@string/seconds"
                android:fontFamily="sans-serif-light"
                />
        </RelativeLayout>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/buttonGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <TextView
            android:id="@+id/history"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="History!"
            />
    </ScrollView>

    <RelativeLayout
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <Button
            android:id="@+id/startbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTimer"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:backgroundTint="#E83E3E"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <Button
            android:id="@+id/pausebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pauseTimer"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:backgroundTint="#EA7070"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <Button
            android:id="@+id/continuebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continueTimer"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:backgroundTint="#EA7070"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <Button
            android:id="@+id/endbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/continuebtn"
            android:layout_marginStart="30dp"
            android:backgroundTint="#E83E3E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/endTimer"
            android:textSize="20sp"
            android:textAllCaps="false"
            />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>